cfn_benchmark/cfn_templates/aws-ia__cfn-mp-ql-rules/test/fixtures/templates/stackhelper/quickstart-informatica-tableau-analytics/templates/informatica-security-group.template
{
   "AWSTemplateFormatVersion":"2010-09-09",
   "Description":"Create Informatica EDC Elastic IPS for Hadoop Node Security Groups",
   "Parameters":{
      "VPCID":{
         "Description":"VPC to which security groups belong",
         "Type":"AWS::EC2::VPC::Id"
      },
      "PublicSubnetA":{
         "Description":"Private subnet for EDC and EDC Nodes",
         "Type":"AWS::EC2::Subnet::Id"
      },
      "RemoteAccessCIDR":{
         "Description":"The IP address range that can be used to access the Talend servers using SSH.",
         "Type":"String"
      },
      "VPCCIDR":{
         "Description":"The IP address range that can be used to access the Talend servers using SSH.",
         "Type":"String"
      }
   },
   "Mappings":{

   },
   "Conditions":{

   },
   "Resources":{
      "ElasticIPNode1":{
         "Type":"AWS::EC2::EIP",
         "Properties":{
            "Domain":"vpc"
         }
      },
      "Node1NetInterface":{
         "Type":"AWS::EC2::NetworkInterface",
         "Properties":{
            "Description":"Interface for Node 1 traffic",
            "SubnetId":{
               "Ref":"PublicSubnetA"
            },
            "GroupSet":[
               {
                  "Ref":"AdditionalInformaticaSecurityGroup"
               }
            ],
            "SourceDestCheck":"true",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"Informatica Node 1 Network Interface"
               }
            ]
         }
      },
      "Node1IPAssoc":{
         "Type":"AWS::EC2::EIPAssociation",
         "Properties":{
            "AllocationId":{
               "Fn::GetAtt":[
                  "ElasticIPNode1",
                  "AllocationId"
               ]
            },
            "NetworkInterfaceId":{
               "Ref":"Node1NetInterface"
            }
         }
      },
    "IICSSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Enable Informatica Intelligent Cloud Services addresses",
            "VpcId":{
               "Ref":"VPCID"
            },
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.24.61.131/32"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.11.251.104/32"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"50.112.49.143/32"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.10.243.198/32"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"34.211.40.58/32"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.69.116.168/32"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"34.213.159.62/32"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.191.222.209/32"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.148.162.18/32"

               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.40.243.250/32"

               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.36.242.47/32"

               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.40.102.26/32"

               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.40.87.208/32"

               },
              {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.201.47.127/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.201.249.103/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.186.168.138/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.187.191.237/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.0.69.101/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.7.23.55/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.21.32.215/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"34.192.140.244/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"34.192.146.84/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"34.192.136.177/32"
               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.88.61.96/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.191.56.244/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"35.166.78.117/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.201.136.247/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"34.217.226.198/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.200.198.134/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.204.142.211/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"107.23.152.33/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"18.215.83.20/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.203.120.190/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.3.111.174/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"18.209.156.61/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.205.75.129/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"107.23.162.216/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.3.153.17/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.4.49.138/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"18.205.145.16/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"4.196.111.175/32"

               },
          {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"107.23.133.198/32"

               },
          {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"4.196.111.175/32"

               },
          {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"4.196.111.175/32"

               },
          {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"4.196.111.175/32"

               },
          {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.20.85.152/32"

               }, {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"107.23.41.125/32"

               },
          {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"4.196.111.175/32"

               }, {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.54.170.90/32"

               }, {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"34.193.226.99/32"

               }, {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"34.199.46.29/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.24.141.40/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"35.162.185.167/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.25.124.98/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.68.205.159/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.32.252.206/32"

               },
          {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"34.214.47.233/32"

               },
          {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"107.23.73.191/32"

               },
          {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.4.94.16/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"34.192.23.61/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"107.23.71.56/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"52.4.57.103/32"

               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"54.86.155.230/32"

               }

            ]
         }
      },
      "InfaDomainSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Enable Informatica Domain Server Access",
            "VpcId":{
               "Ref":"VPCID"
            },
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"6005",
                  "ToPort":"6010",
                  "CidrIp":{
                     "Ref":"RemoteAccessCIDR"
                  },
          "Description":"Rule to open port for informatica domain for the IP range user has provided"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8443",
                  "ToPort":"8443",
                  "CidrIp":{
                     "Ref":"RemoteAccessCIDR"
                  },
          "Description":"Rule to open port for Informatica domain for the IP range user has provided"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8085",
                  "ToPort":"8085",
                  "CidrIp":{
                     "Ref":"RemoteAccessCIDR"
                  },
          "Description":"Rule to open port to access LDM Service for the IP range user has provided"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"22",
                  "ToPort":"22",
                  "CidrIp":{
                     "Ref":"RemoteAccessCIDR"
                  },
          "Description":"Rule to open SSh port for the IP range user has provided"
               }
            ]
         }
      },
      "DomainIngress":{
         "Type":"AWS::EC2::SecurityGroupIngress",
         "Properties":{
            "FromPort":"0",
            "GroupId":{
               "Fn::GetAtt":[
                  "InfaDomainSecurityGroup",
                  "GroupId"
               ]
            },
            "IpProtocol":"tcp",
            "SourceSecurityGroupId":{
               "Fn::GetAtt":[
                  "AdditionalInformaticaSecurityGroup",
                  "GroupId"
               ]
            },
            "ToPort":"65535",
      "Description":"Ingress rule to access IHS node from Informatica Domain"
         }
      },
     "DomainIICSIngress":{
         "Type":"AWS::EC2::SecurityGroupIngress",
         "Properties":{
            "FromPort":"0",
            "GroupId":{
               "Fn::GetAtt":[
                  "InfaDomainSecurityGroup",
                  "GroupId"
               ]
            },
            "IpProtocol":"tcp",
            "SourceSecurityGroupId":{
               "Fn::GetAtt":[
                  "IICSSecurityGroup",
                  "GroupId"
               ]
            },
            "ToPort":"65535",
      "Description":"Ingress rule to whitelist IICS addresses"
         }
      },
      "InfaDBSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Informatica domain access to RDS DB",
            "VpcId":{
               "Ref":"VPCID"
            },
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"1521",
                  "ToPort":"1521",
                  "CidrIp":{
                     "Ref":"VPCCIDR"
                  },
         "Description":"Rule to make RDS accessiblecto Tableau , Informatica domain and other components in a VPC."

               }
            ]
         }
      },

      "AdditionalInformaticaSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Allowing all ports for all IPs incoming and outgoing",
            "VpcId":{
               "Ref":"VPCID"
            },
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8080",
                  "ToPort":"8080",
                  "CidrIp":{
                     "Ref":"RemoteAccessCIDR"
                  },
          "Description":"Rule to open port to Access the Ambari Server"
               },
         {
                  "IpProtocol":"tcp",
                  "FromPort":"8443",
                  "ToPort":"8443",
                  "CidrIp":{
                     "Ref":"RemoteAccessCIDR"
                  },
          "Description":"Rule to open port for informatica domain for the IP range user has provided"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8088",
                  "ToPort":"8088",
                  "CidrIp":{
                     "Ref":"RemoteAccessCIDR"
                  },
          "Description":"Rule to open port to access the hadoop cluster jobs."
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8042",
                  "ToPort":"8042",
                  "CidrIp":{
                     "Ref":"RemoteAccessCIDR"
                  },
          "Description":"Rule to open port to access the hadoop cluster Node Manager ."
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"0",
                  "ToPort":"65535",
                  "SourceSecurityGroupId":{
                     "Ref":"InfaDomainSecurityGroup"
                  }
               }
            ]
         }
      },
      "AdministrationServerEIP":{
         "Type":"AWS::EC2::EIP",
         "Properties":{
            "Domain":"vpc"
         }
      },
      "AdministrationServerNetInterface":{
         "Type":"AWS::EC2::NetworkInterface",
         "Properties":{
            "Description":"Interface for Administrator Server traffic",
            "SubnetId":{
               "Ref":"PublicSubnetA"
            },
            "GroupSet":[
               {
                  "Ref":"InfaDomainSecurityGroup"
               }
            ],
            "SourceDestCheck":"true",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"Informatica Network Interface"
               }
            ]
         }
      },
      "AdministrationServerAssoc":{
         "Type":"AWS::EC2::EIPAssociation",
         "Properties":{
            "AllocationId":{
               "Fn::GetAtt":[
                  "AdministrationServerEIP",
                  "AllocationId"
               ]
            },
            "NetworkInterfaceId":{
               "Ref":"AdministrationServerNetInterface"
            }
         }
      },
      "TableauSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Enable RDP",
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"80",
                  "ToPort":"80",
                  "CidrIp":{
                     "Ref":"RemoteAccessCIDR"
                  }
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"80",
                  "ToPort":"80",
                  "CidrIp":{
                     "Ref":"VPCCIDR"
                  }
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8850",
                  "ToPort":"8850",
                  "CidrIp":{
                     "Ref":"RemoteAccessCIDR"
                  }
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8850",
                  "ToPort":"8850",
                  "CidrIp":{
                     "Ref":"VPCCIDR"
                  }
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"3389",
                  "ToPort":"3389",
                  "CidrIp":{
                     "Ref":"RemoteAccessCIDR"
                  }
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"3389",
                  "ToPort":"3389",
                  "CidrIp":{
                     "Ref":"VPCCIDR"
                  }
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"80",
                  "ToPort":"80",
                  "CidrIp":{
                     "Fn::Join":[
                        "",
                        [
                           {
                              "Ref":"AdministrationServerEIP"
                           },
                           "/32"
                        ]
                     ]
                  },
          "Description":"Rule to make Tableau Server url accessible to the IHS Node required to run scanners or mappings."
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8850",
                  "ToPort":"8850",
                  "CidrIp":{
                     "Fn::Join":[
                        "",
                        [
                           {
                              "Ref":"AdministrationServerEIP"
                           },
                           "/32"
                        ]
                     ]
                  },
          "Description":"Rule to make Tableau Server manager url accessible to the IHS Node required to run scanners or mappings."
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"80",
                  "ToPort":"80",
                  "CidrIp":{
                     "Fn::Join":[
                        "",
                        [
                           {
                              "Ref":"ElasticIPNode1"
                           },
                           "/32"
                        ]
                     ]
                  },
          "Description":"Rule to make Tableau Server url accessible to the IHS Node required to run scanners"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8850",
                  "ToPort":"8850",
                  "CidrIp":{
                     "Fn::Join":[
                        "",
                        [
                           {
                              "Ref":"ElasticIPNode1"
                           },
                           "/32"
                        ]
                     ]
                  },
          "Description":"Rule to make Tableau Server manager url accessible to the IHS Node required to run scanners"
               }
            ],
            "VpcId":{
               "Ref":"VPCID"
            }
         }
      },
      "TableauIpAddress":{
         "Type":"AWS::EC2::EIP",
         "Properties":{
            "Domain":"vpc"
         }
      },
      "TableauServerNetInterface":{
         "Type":"AWS::EC2::NetworkInterface",
         "Properties":{
            "Description":"Interface for Administrator Server traffic",
            "SubnetId":{
               "Ref":"PublicSubnetA"
            },
            "GroupSet":[
               {
                  "Ref":"TableauSecurityGroup"
               }
            ],
            "SourceDestCheck":"true",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"Informatica Network Interface"
               }
            ]
         }
      },
      "TableauServerAssoc":{
         "Type":"AWS::EC2::EIPAssociation",
         "Properties":{
            "AllocationId":{
               "Fn::GetAtt":[
                  "TableauIpAddress",
                  "AllocationId"
               ]
            },
            "NetworkInterfaceId":{
               "Ref":"TableauServerNetInterface"
            }
         }
      }
   },
   "Outputs":{
      "InfaDBSecurityGroup":{
         "Description":"Informatica DB security group.",
         "Value":{
            "Ref":"InfaDBSecurityGroup"
         },
         "Export":{
            "Name":{
               "Fn::Sub":"${AWS::StackName}:InfaDBSecurityGroup"
            }
         }
      },
      "AdditionalInformaticaSecurityGroup":{
         "Description":"Additional Informatica security group.",
         "Value":{
            "Ref":"AdditionalInformaticaSecurityGroup"
         },
         "Export":{
            "Name":{
               "Fn::Sub":"${AWS::StackName}:AdditionalInformaticaSecurityGroup"
            }
         }
      },
      "InfaDomainSecurityGroup":{
         "Description":"Infa Domain security group.",
         "Value":{
            "Ref":"InfaDomainSecurityGroup"
         },
         "Export":{
            "Name":{
               "Fn::Sub":"${AWS::StackName}:InfaDomainSecurityGroup"
            }
         }
      },
      "TableauSecurityGroup":{
         "Description":"Tableau security group.",
         "Value":{
            "Ref":"TableauSecurityGroup"
         },
         "Export":{
            "Name":{
               "Fn::Sub":"${AWS::StackName}:TableauSecurityGroup"
            }
         }
      },
      "NetworkInterface":{
         "Description":"Node Network Interface",
         "Value":{
            "Ref":"Node1NetInterface"
         },
         "Export":{
            "Name":{
               "Fn::Sub":"${AWS::StackName}:NetworkInterface"
            }
         }
      },
      "AdministrationServerNetInterface":{
         "Description":"Administrator Network Interface",
         "Value":{
            "Ref":"AdministrationServerNetInterface"
         },
         "Export":{
            "Name":{
               "Fn::Sub":"${AWS::StackName}:AdministrationServerNetInterface"
            }
         }
      },
      "TableauServerNetInterface":{
         "Description":"Tableau Network Interface",
         "Value":{
            "Ref":"TableauServerNetInterface"
         },
         "Export":{
            "Name":{
               "Fn::Sub":"${AWS::StackName}:TableauServerNetInterface"
            }
         }
      },
      "TableauIpAddress":{
         "Description":"Elastic IP of Tableau Server",
         "Value":{
            "Ref":"TableauIpAddress"
         },
         "Export":{
            "Name":{
               "Fn::Sub":"${AWS::StackName}:TableauIpAddress"
            }
         }
      }
   }
}
